--- a/requirements.txt
+++ b/requirements.txt
@@ -15,15 +15,15 @@ diskcache==4.1.0
 h5py
 jupyter
 matplotlib
-numpy<=1.16.4
+numpy
 Pillow
 scikit-image>=0.15.0
 scipy
 SimpleITK
-tensorflow>=1.14,<2
+tensorflow>=1.14
 
 # The book was written targeting PyTorch 1.4, but everything in it should work fine with more up-to-date versions.
-torch==1.4
+torch
 
 # future is here due to a missing dep in caffe2
 # future
